Refactor VehicleManagerTest: Improved test coverage and structure
- Merged and refactored validation tests in testVehicleValidation.
- Added more comprehensive test cases for vehicle addition, including handling of duplicate plates and invalid plates.
- Updated tests for vehicle status updates, maintenance scheduling, and completion.
- Improved canOperateVehicle method test with additional edge cases for null and empty license lists.
- Ensured proper exception handling and assertions for all edge cases.